tests/samples/valid_code/valid_sample.bas
Attribute VB_Name = "ValidCode"
Sub TestValid()
    Dim i As Integer
    For i = 1 To 10
        Debug.Print i
    Next i
End Sub
