tests/samples/compile_errors/type_mismatch/expected_array_or_procedure.bas
Attribute VB_Name = "TypeMismatch"
Sub TestMismatch()
    Dim i As Integer
    i = 5
    i(1) = 10 ' i is integer, not array or procedure
End Sub
